# mc-audio

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.md  conanfile.py
.github/workflows/: analyze_coverage.yml  test_emscripten.yml  test_linux.yml  test_macos.yml  test_windows.yml
examples/: CMakeLists.txt  midi-notes.cpp  note.cpp
src/: CMakeLists.txt  mc-audio-config.cmake  mc-dsp-config.cmake  mc-dsp-config.cmake.in
src/mc/: audio.hpp  core.hpp  dsp.hpp  music.hpp
src/mc/audio/: music.hpp  spacial.hpp  stereo.hpp  units.hpp
src/mc/audio/music/: chord.hpp  keyboard.cpp  keyboard.hpp  keyboard.test.cpp  note.cpp  note.hpp  to_hertz.cpp  to_hertz.hpp  to_hertz.test.cpp  to_nearest_note.hpp  to_nearest_note.test.cpp  tuning.hpp
src/mc/audio/music/chord/: is_major.cpp  is_major.hpp  is_major.test.cpp  is_minor.cpp  is_minor.hpp  is_minor.test.cpp
src/mc/audio/music/keyboard/: is_black_key.hpp  is_black_key.test.cpp  is_white_key.cpp  is_white_key.hpp  is_white_key.test.cpp
src/mc/audio/music/note/: is_black_key.cpp  is_black_key.test.cpp  is_white_key.cpp  is_white_key.test.cpp  keyboard.cpp  keyboard.hpp  keyboard.test.cpp  note.cpp  note.hpp  note.test.cpp  note_interval.cpp  note_interval.hpp  semitones.cpp  semitones.hpp  semitones.test.cpp  to_hertz.cpp  to_hertz.hpp  to_hertz.test.cpp  to_nearest_note.hpp  to_nearest_note.test.cpp
src/mc/audio/spacial/: mid_side_frame.hpp  stereo_frame.cpp  stereo_frame.hpp  stereo_width.cpp  stereo_width.hpp  to_mid_side.hpp  to_stereo.hpp
src/mc/audio/stereo/: stereo_frame.hpp  stereo_frame.ipp  stereo_frame.test.cpp  stereo_width.hpp  stereo_width.impl.hpp  to_mid_side.hpp  to_mid_side.ipp  to_stereo.hpp  to_stereo.impl.hpp
src/mc/audio/units/: decibel.cpp  decibel.hpp  decibel.ipp  decibel.test.cpp  frequency.hpp  frequency.test.cpp
src/mc/core/: algorithm.hpp  array.hpp  functional.hpp  math.hpp  numeric.hpp  span.hpp  type_traits.hpp  types.hpp
src/mc/core/functional/: function_ref.hpp
src/mc/dsp/: midi.hpp  music.hpp  spacial.hpp  svf.hpp  units.hpp
src/mc/dsp/midi/: frequency.hpp  keyboard.hpp  note.hpp  to_hertz.hpp  to_midi_note.hpp  tuning.hpp
src/mc/dsp/music/: keyboard.cpp  keyboard.hpp  keyboard.impl.hpp  keyboard.test.cpp  note.cpp  note.hpp  note.impl.hpp  to_hertz.cpp  to_hertz.hpp  to_hertz.impl.hpp  to_hertz.test.cpp  to_nearest_note.hpp  to_nearest_note.test.cpp  tuning.hpp
src/mc/dsp/spacial/: mid_side_frame.hpp  stereo_frame.cpp  stereo_frame.hpp  stereo_width.cpp  stereo_width.hpp  to_mid_side.hpp  to_stereo.hpp
src/mc/dsp/svf/: double_sampled.hpp  double_sampled_bpf.hpp  double_sampled_hpf.hpp  double_sampled_lpf.hpp  double_sampled_notch.hpp  double_sampled_peak.hpp
src/mc/dsp/units/: decibel.cpp  decibel.hpp  decibel.test.cpp  frequency.hpp  frequency.test.cpp
src/mc/music/: chord.hpp  keyboard.hpp  note.hpp  rhythm.hpp  tuning.hpp
src/mc/music/chord/: is_major.cpp  is_major.hpp  is_major.impl.hpp  is_major.test.cpp  is_minor.cpp  is_minor.hpp  is_minor.ipp  is_minor.test.cpp
src/mc/music/keyboard/: is_black_key.hpp  is_black_key.impl.hpp  is_black_key.test.cpp  is_white_key.cpp  is_white_key.hpp  is_white_key.impl.hpp  is_white_key.test.cpp  make_piano_notes.cpp  make_piano_notes.hpp  make_piano_notes.test.cpp
src/mc/music/note/: note.hpp  note.ipp  note.test.cpp  semitones.cpp  semitones.hpp  semitones.impl.hpp  semitones.test.cpp  to_hertz.hpp  to_hertz.ipp  to_hertz.test.cpp  to_nearest_note.hpp  to_nearest_note.test.cpp
src/mc/music/rhythm/: ppqn.hpp  ppqn.impl.hpp  ppqn.ipp  ppqn.test.cpp
test_package/: CMakeLists.txt  test_package.cpp
